--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../dist/output.css" rel="stylesheet">
-    <title>Landing Page</title>
+    <title>Landing Page Anu.com</title>
 </head>
 
 <body>
@@ -25,8 +25,8 @@
     <section class="py-16 justify-center">
         <div class="container mx-auto px-4 text-center">
             <h1 class="text-4xl font-bold text-gray-800 mb-8">Welcome to Anu.com</h1>
-            <p class="text-gray-600 mb-6">Anu.com adalah sebuah website yang isinya membahas tentang barbagai macam
-                teori konspirasi.</p>
+            <p class="text-gray-600 mb-6">Anu.com akan membantu mewujudkan impian anda untuk menjadi seorang aktor
+                profesional</p>
             <a href="#"
                 class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">MULAI</a>
         </div>
